--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 							    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">김동호</h1>
 							    <div class="title mb-3">Backend Developer</div>
 							    <ul class="list-unstyled">
-								    <li class="mb-2"><a class="text-link" href="javascript:void(0);"><i class="far fa-envelope fa-fw me-2" data-fa-transform="grow-3"></i>kdh90817@naver.com</a></li>
-								    <li><a class="text-link" href="javascript:void(0);"><i class="fas fa-mobile-alt fa-fw me-2" data-fa-transform="grow-6"></i>010 3502 1599</a></li>
+								    <li class="mb-2"><a class="text-link" href="javascript:void(0);" style="cursor: default;"><i class="far fa-envelope fa-fw me-2" data-fa-transform="grow-3"></i>kdh90817@naver.com</a></li>
+								    <li><a class="text-link" href="javascript:void(0);" style="cursor: default;"><i class="fas fa-mobile-alt fa-fw me-2" data-fa-transform="grow-6"></i>010 3502 1599</a></li>
 							    </ul>
 						    </div><!--//primary-info-->
 						    <div class="secondary-info col-auto mt-2">
