update: modify technologies used

--- a/index.html
+++ b/index.html
@@ -83,12 +83,27 @@
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 										    <ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Java</span></li>
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Javascript</span></li>
+										    </ul>
+											<ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Spring Boot</span></li>
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">MyBatis</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Oracle</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">MySQL</span></li>
+										    </ul>
+											<ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Thymeleaf</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">JSP</span></li>
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Nexacro</span></li>
+										    </ul>
+											<ul class="list-inline">
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">GitLab</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jenkins</span></li>
+										    </ul>
+											<ul class="list-inline">
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jira</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Confluence Wiki</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Slack</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 
@@ -113,10 +128,27 @@
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 										    <ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Java</span></li>
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Javascript</span></li>
+										    </ul>
+											<ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Spring Boot</span></li>
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">MyBatis</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Oracle</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">MySQL</span></li>
+										    </ul>
+											<ul class="list-inline">
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Thymeleaf</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">JSP</span></li>
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Nexacro</span></li>
+										    </ul>
+											<ul class="list-inline">
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">GitLab</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jenkins</span></li>
+										    </ul>
+											<ul class="list-inline">
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jira</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Confluence Wiki</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Slack</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 
@@ -140,12 +172,27 @@
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 										    <ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Java</span></li>
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Javascript</span></li>
+										    </ul>
+											<ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Spring Boot</span></li>
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">MyBatis</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Oracle</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">MySQL</span></li>
+										    </ul>
+											<ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Thymeleaf</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">JSP</span></li>
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Nexacro</span></li>
+										    </ul>
+											<ul class="list-inline">
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">GitLab</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jenkins</span></li>
+										    </ul>
+											<ul class="list-inline">
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jira</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Confluence Wiki</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Slack</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 
@@ -168,13 +215,25 @@
 											    <li class="mtxt">Backoffice 회원 관리</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
-										    <ul class="list-inline">
+											<ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Java</span></li>
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Javascript</span></li>
+										    </ul>
+											<ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Spring Framework</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Spring Batch</span></li>
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">MyBatis</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Oracle</span></li>
-											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">JSP</span></li>
+										    </ul>
+											<ul class="list-inline">
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">JSP</span></li>
+										    </ul>
+											<ul class="list-inline">
+											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">SVN</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jenkins</span></li>
+										    </ul>
+											<ul class="list-inline">
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Confluence Wiki</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 
