chore(index): change the content

--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
 
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
-												<h3 class="resume-position-title font-weight-bold mb-1 mtxt">현대리바트몰 H.Point Pay 개발</h3>
+												<h3 class="resume-position-title font-weight-bold mb-1 mtxt">현대리바트몰 H.Point Pay 연동 개발</h3>
 											</div><!--//row-->
 
 										</div><!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
-											<p class="mtxt">통합 간편 결제 서비스 H.Point Pay 개발</p>
+											<p class="mtxt">통합 간편 결제 서비스 H.Point Pay 연동 개발</p>
 											<div class="resume-position-time mtxt">2023-01 - Present</div>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 											<ul class="list-achieve">
-												<li class="mtxt">H.Point Pay 개발</li>
+												<li class="mtxt">H.Point Pay 연동</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 											<ul class="list-inline">
