update: change the content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="assets/css/pillar-2.css">
 
-	<link id="theme-style" rel="stylesheet" href="assets/css/custom.css">
+	<link rel="stylesheet" href="assets/css/custom.css">
 </head> 
 <body>	
     <article class="resume-wrapper text-center position-relative">
@@ -74,11 +74,12 @@
 
 										</div><!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
-											<p class="mtxt">통합 간편 결제 서비스 H.Point Pay 연동 개발</p>
+											<p class="mtxt">통합 간편 결제 서비스 H.Point Pay 연동</p>
 											<div class="resume-position-time mtxt">2023-01 - Present</div>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 											<ul class="list-achieve">
-												<li class="mtxt">H.Point Pay 연동</li>
+												<li class="mtxt">결제 수단 카드&계좌 관리 개발</li>
+												<li class="mtxt">H.Point Pay 간편 결제 주문 개발</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 											<ul class="list-inline">
@@ -96,10 +97,11 @@
 											<ul class="list-inline">
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Git</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Bitbucket</span></li>
-												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jenkins</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Bamboo</span></li>
 											</ul>
 											<ul class="list-inline">
-												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Confluence Wiki</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Wiki</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jira</span></li>
 											</ul>
 										</div><!--//resume-timeline-item-desc-->
 
@@ -145,7 +147,7 @@
 										    </ul>
 											<ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jira</span></li>
-												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Confluence Wiki</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Wiki</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Slack</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
@@ -191,7 +193,7 @@
 										    </ul>
 											<ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jira</span></li>
-												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Confluence Wiki</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Wiki</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Slack</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
@@ -236,7 +238,7 @@
 										    </ul>
 											<ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jira</span></li>
-												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Confluence Wiki</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Wiki</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Slack</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
@@ -279,7 +281,7 @@
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jenkins</span></li>
 										    </ul>
 											<ul class="list-inline">
-												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Confluence Wiki</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Wiki</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 
