modify: change the content

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
-												<h3 class="resume-position-title font-weight-bold mb-1 mtxt">현대리바트몰 H.Point Pay 연동 개발</h3>
+												<h3 class="resume-position-title font-weight-bold mb-1 mtxt">현대리바트몰 H.Point Pay 연동</h3>
 											</div><!--//row-->
 
 										</div><!--//resume-timeline-item-header-->
@@ -78,7 +78,7 @@
 											<div class="resume-position-time mtxt">2023-01 - Present</div>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 											<ul class="list-achieve">
-												<li class="mtxt">결제 수단 카드&계좌 관리 개발</li>
+												<li class="mtxt">결제 수단 카드 & 계좌 관리 개발</li>
 												<li class="mtxt">H.Point Pay 간편 결제 주문 개발</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
@@ -353,9 +353,8 @@
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Recent Interests</h2>
 						    <div class="resume-section-content">
 							    <ul class="list-unstyled">
-								    <li class="mb-1">Spring Data JPA</li>
-								    <li class="mb-1">TDD</li>
-								    <li class="mb-1">DDD</li>
+								    <li class="mb-1">동시성 프로그래밍</li>
+								    <li class="mb-1">Message Queue</li>
 							    </ul>
 						    </div>
 					    </section><!--//interests-section-->
