modify: change the content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							    <div class="title mb-3">Backend Developer</div>
 							    <ul class="list-unstyled">
 								    <li class="mb-2"><a class="text-link" href="javascript:void(0);" style="cursor: default;"><i class="far fa-envelope fa-fw me-2" data-fa-transform="grow-3"></i>kdh90817@naver.com</a></li>
-								    <li><a class="text-link" href="javascript:void(0);" style="cursor: default;"><i class="fas fa-mobile-alt fa-fw me-2" data-fa-transform="grow-6"></i>010 3502 1599</a></li>
+								    <li><a class="text-link" href="tel:010-3502-1599" style="cursor: default;"><i class="fas fa-mobile-alt fa-fw me-2" data-fa-transform="grow-6"></i>010 3502 1599</a></li>
 							    </ul>
 						    </div><!--//primary-info-->
 						    <div class="secondary-info col-auto mt-2">
@@ -51,10 +51,10 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 				    <div class="resume-section-content">
-					    <p class="mb-0 mtxt">Java & Spring 기반의 3년차 백엔드 개발자로 E-commerce 구축 및 운영을 하였습니다.</p>
-						<p class="mtxt">주로 API와 Backoffice를 개발을 해왔으며 그 외에 필요에 따라 Batch와 Presentation 영역도 작업을 했습니다.</p>
-						<p class="mb-0 mtxt">개발자로서 명확한 소스와 지속적인 테스트가 비지니스 가치를 창출한다고 믿습니다.</p>
-						<p class="mtxt">이를 위해 꾸준히 리펙토링 및 테스트를 진행하며 부족한 지식을 학습으로 꾸준히 채워나가고 있습니다.</p>
+					    <p class="mb-0 mtxt">Java & Spring 기반의 3년차 백엔드 개발자로 E-commerce 구축 및 운영을 담당하여, <br>회원 가입/로그인, 상품 구매, 주문/결제, 배송 관리 등의 기능을 개발하였습니다.</p>
+						<p class="mtxt">특히, API와 Backoffice 개발을 중심으로 진행하였으며, Batch와 Presentation 영역도 경험이 있습니다. <br>이를 통해, 시스템 전반적인 구조와 개발 경험을 쌓았습니다.</p>
+						<p class="mb-0 mtxt">또한, 소스 코드의 가독성과 유지보수성을 높이기 위해 지속적인 리팩토링을 수행하였습니다. <br>이로 인해, 서비스 안정성을 보장하고 비지니스 가치를 창출하는데 큰 역할을 하였습니다.</p>
+						<p class="mtxt">더불어, 새로운 기술과 개발 도구에 대한 지속적인 학습과 개인적인 프로젝트 수행을 통해 지식과 경험을 늘리고 있습니다.</p>
 				    </div>
 			    </section><!--//summary-section-->
 			    <div class="row">
@@ -74,12 +74,17 @@
 
 										</div><!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
-											<p class="mtxt">통합 간편 결제 서비스 H.Point Pay 연동</p>
+											<p class="mtxt">현대리바트몰과 H.Point Pay 간편 결제 서비스 연동을 담당</p>
 											<div class="resume-position-time mtxt">2023-01 - Present</div>
+											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Key Responsibilities:</h4>
+											<ul class="list-achieve">
+												<li class="mtxt">카드 & 계좌 관리 기능</li>
+												<li class="mtxt">H.Point Pay 간편 결제 주문 기능</li>
+											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 											<ul class="list-achieve">
-												<li class="mtxt">결제 수단 카드 & 계좌 관리 개발</li>
-												<li class="mtxt">H.Point Pay 간편 결제 주문 개발</li>
+												<li class="mtxt">사용자가 보유한 카드와 계좌를 한눈에 확인하고, 필요할 때 추가 등록이 가능하도록 개발하여 사용자 경험을 향상</li>
+												<li class="mtxt">사용자가 H.Point Pay 간편 결제를 원하는 상품을 한 번의 클릭으로 주문할 수 있도록 개발하여, 결제 성공률과 사용자 만족도를 높임</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 											<ul class="list-inline">
@@ -119,11 +124,17 @@
 									    <div class="resume-timeline-item-desc">
 										    <p class="mtxt">기획전 고도화 및 전시 운영</p>
 											<div class="resume-position-time mtxt">2021-10 - 2022-12</div>
+										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Responsibilities:</h4>
+										    <ul class="list-achieve">
+												<li class="mtxt">기획전 템플릿 고도화를 통한 템플릿 사용률 증가</li>
+											    <li class="mtxt">기획전 혜택 분산 소스를 재설계하여 하나로 통합</li>
+											    <li class="mtxt">쿼리 최적화 및 소스 간소화, 스크립트 지연 로딩을 통한 페이지 로딩 시간 개선 (평균 33 ~ 40% 상향)</li>
+										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 										    <ul class="list-achieve">
-												<li class="mtxt">기획전 템플릿 고도화를 통해 템플릿 사용률 증가.</li>
-											    <li class="mtxt">기획전 혜택에 대한 분산된 소스를 재설계하여 하나로 통합.</li>
-											    <li class="mtxt">쿼리 최적화 및 소스 간소화, 스크립트 지연 로딩을 통해 평균 페이지 로딩 시간 약 33 ~ 40% 상향.</li>
+												<li class="mtxt">템플릿 고도화로 인한 템플릿 사용률 40% 상승</li>
+											    <li class="mtxt">하나로 통합한 기획전 혜택 분산 소스 관리 용이</li>
+											    <li class="mtxt">페이지 로딩 시간 개선으로 고객 만족도 증대</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 										    <ul class="list-inline">
