modify: change the content

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 										<div class="resume-timeline-item-desc">
 											<p class="mtxt">현대리바트몰과 H.Point Pay 간편 결제 서비스 연동을 담당</p>
 											<div class="resume-position-time mtxt">2023-01 - Present</div>
-											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Key Responsibilities:</h4>
+											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Responsibilities:</h4>
 											<ul class="list-achieve">
 												<li class="mtxt">카드 & 계좌 관리 기능</li>
 												<li class="mtxt">H.Point Pay 간편 결제 주문 기능</li>
