modify: change the content

--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Recent Interests</h2>
 						    <div class="resume-section-content">
 							    <ul class="list-unstyled">
+								    <li class="mb-1">Kotlin</li>
 								    <li class="mb-1">동시성 프로그래밍</li>
 								    <li class="mb-1">Message Queue</li>
 							    </ul>
