modify: change the content

--- a/index.html
+++ b/index.html
@@ -76,15 +76,10 @@
 										<div class="resume-timeline-item-desc">
 											<p class="mtxt">현대리바트몰과 H.Point Pay 간편 결제 서비스 연동을 담당</p>
 											<div class="resume-position-time mtxt">2023-01 - Present</div>
-											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Responsibilities:</h4>
-											<ul class="list-achieve">
-												<li class="mtxt">카드 & 계좌 관리 기능</li>
-												<li class="mtxt">H.Point Pay 간편 결제 주문 기능</li>
-											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 											<ul class="list-achieve">
-												<li class="mtxt">사용자가 보유한 카드와 계좌를 한눈에 확인하고, 필요할 때 추가 등록이 가능하도록 개발하여 사용자 경험을 향상</li>
-												<li class="mtxt">사용자가 H.Point Pay 간편 결제를 원하는 상품을 한 번의 클릭으로 주문할 수 있도록 개발하여, 결제 성공률과 사용자 만족도를 높임</li>
+												<li class="mtxt">개발한 H.Point Pay 간편 결제 주문 기능에서는 다양한 예외 상황을 고려한 예외 처리를 추가하여 사용자 경험을 개선하고 결제 성공률을 높였습니다.</li>
+												<li class="mtxt">사용자가 보유한 카드와 계좌를 쉽게 확인하고 추가 등록할 수 있는 기능을 개발하여 사용자 경험을 향상시켰습니다.</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 											<ul class="list-inline">
@@ -122,19 +117,13 @@
 
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <p class="mtxt">기획전 고도화 및 전시 운영</p>
+										    <p class="mtxt">기획전 고도화 및 전시 서비스 운영</p>
 											<div class="resume-position-time mtxt">2021-10 - 2022-12</div>
-										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Responsibilities:</h4>
-										    <ul class="list-achieve">
-												<li class="mtxt">기획전 템플릿 고도화를 통한 템플릿 사용률 증가</li>
-											    <li class="mtxt">기획전 혜택 분산 소스를 재설계하여 하나로 통합</li>
-											    <li class="mtxt">쿼리 최적화 및 소스 간소화, 스크립트 지연 로딩을 통한 페이지 로딩 시간 개선 (평균 33 ~ 40% 상향)</li>
-										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 										    <ul class="list-achieve">
-												<li class="mtxt">템플릿 고도화로 인한 템플릿 사용률 40% 상승</li>
-											    <li class="mtxt">하나로 통합한 기획전 혜택 분산 소스 관리 용이</li>
-											    <li class="mtxt">페이지 로딩 시간 개선으로 고객 만족도 증대</li>
+												<li class="mtxt">템플릿 기획전을 고도화를 통하여 관리자로부터 템플릿 사용률을 40% 상승 시켰습니다.</li>
+												<li class="mtxt">쿠폰, 마일리지와 같은 혜택에 대한 잦은 오발급 이슈를 재설계하여 하나로 통합하는데 성공했습니다.</li>
+												<li class="mtxt">레거시 소스를 제거 및 리팩토링하고 쿼리를 최적화 했으며 스크립트 지연 로딩을 통해 페이지 로딩 시간을 평균 33~40% 상향시켜 고객 만족도 증대에 기여하였습니다.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 										    <ul class="list-inline">
@@ -179,8 +168,8 @@
 											<div class="resume-position-time mtxt">2021-08 - 2021-10</div>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 										    <ul class="list-achieve">
-												<li class="mtxt">MySQL 문법으로 사용하던 모든 쿼리를 Oracle 문법으로 전환.</li>
-											    <li class="mtxt">전환으로 인한 속도 이슈를 오라클 힌트와 쿼리 최적화를 통해 수정.</li>
+												<li class="mtxt">LFmall에서는 기존 MySQL 영역을 제거하고, Oracle로 DB 전환 작업을 진행했습니다.</li>
+												<li class="mtxt">MySQL 문법으로 사용하던 모든 쿼리를 Oracle 문법으로 전환하였으며, 전환으로 인한 속도 이슈를 Oracle 힌트와 쿼리 최적화를 통해 수정하였습니다.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 										    <ul class="list-inline">
@@ -225,7 +214,8 @@
 											<div class="resume-position-time mtxt">2021-03 - 2021-08</div>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 										    <ul class="list-achieve">
-												<li class="mtxt">많은 컨텐츠로 인하여 속도 이슈가 발생하여 HTTP 2.0 적용 또한 스크립트, 이미지 모두 지연 로딩을 통하여 이슈 해결</li>
+												<li class="mtxt">많은 컨텐츠로 인한 속도 이슈가 발생하여 HTTP 1.1에서 HTTP 2.0으로 업그레이드를 제안</li>
+												<li class="mtxt">스크립트와 이미지에 대해서도 지연 로딩을 적용하여 이슈를 해결하였습니다. 이렇게 진행된 프로젝트를 통해 고객들의 접근성을 개선하고, 사용성을 향상시켰습니다.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 										    <ul class="list-inline">
@@ -270,8 +260,7 @@
 											<div class="resume-position-time mtxt">2020-02 - 2021-02</div>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 										    <ul class="list-achieve">
-												<li class="mtxt">Backoffice 상품 등록 & 관리</li>
-											    <li class="mtxt">Backoffice 회원 관리</li>
+												<li class="mtxt">기존 리바트몰에서 제공되지 않았던 상품 관리 및 회원 관리 기능을 이전 레거시 프로젝트의 분석과 설계를 철저히 수행하여 기존 기능을 유지하고, 새롭게 기능을 추가하여 사용자에게 더욱 편리한 쇼핑 경험을 제공할 수 있었습니다. 이로써 사용자는 더욱 안정적이고 빠르게 쇼핑을 즐길 수 있게 되었습니다.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 											<ul class="list-inline">
