modify: change the content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							    <div class="title mb-3">Backend Developer</div>
 							    <ul class="list-unstyled">
 								    <li class="mb-2"><a class="text-link" href="javascript:void(0);" style="cursor: default;"><i class="far fa-envelope fa-fw me-2" data-fa-transform="grow-3"></i>kdh90817@naver.com</a></li>
-								    <li><a class="text-link" href="tel:010-3502-1599" style="cursor: default;"><i class="fas fa-mobile-alt fa-fw me-2" data-fa-transform="grow-6"></i>010 3502 1599</a></li>
+								    <!--<li><a class="text-link" href="tel:010-3502-1599" style="cursor: default;"><i class="fas fa-mobile-alt fa-fw me-2" data-fa-transform="grow-6"></i>010 3502 1599</a></li>-->
 							    </ul>
 						    </div><!--//primary-info-->
 						    <div class="secondary-info col-auto mt-2">
