modify: change the content

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 								            <div class="resume-skill-name">MySQL, Oracle</div>
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">Git, GitLab, Jenkins</div>
+								            <div class="resume-skill-name">Git, GitLab, Jenkins, Bitbucket, Bamboo</div>
 								        </li>
 							        </ul>
 						        </div>
