modify: change the content

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										</div><!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
 											<p class="mtxt">현대리바트몰과 H.Point Pay 간편 결제 서비스 연동을 담당</p>
-											<div class="resume-position-time mtxt">2023-01 - Present</div>
+											<div class="resume-position-time mtxt">2023-01 - 2023-05</div>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 											<ul class="list-achieve">
 												<li class="mtxt">개발한 H.Point Pay 간편 결제 주문 기능에서는 다양한 예외 상황을 고려한 예외 처리를 추가하여 사용자 경험을 개선하고 결제 성공률을 높였습니다.</li>
