--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Work Experience</h2>
 						    <div class="resume-section-content">
 								<div class="resume-timeline position-relative">
-									<article class="resume-timeline-item position-relative pb-5">
+									<article class="resume-timeline-item position-relative">
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
 												<h3 class="resume-position-title font-weight-bold mb-1 mtxt">(주)이노트리</h3>
