--- a/index.html
+++ b/index.html
@@ -399,6 +399,14 @@
 						    </div>
 					    </section><!--//education-section-->
 					    <section class="resume-section interests-section mb-5">
+						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Certificate</h2>
+						    <div class="resume-section-content">
+							    <ul class="list-unstyled">
+								    <li class="mb-1">정보처리기사</li>
+							    </ul>
+						    </div>
+					    </section><!--//interests-section-->
+					    <section class="resume-section interests-section mb-5">
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Recent Interests</h2>
 						    <div class="resume-section-content">
 							    <ul class="list-unstyled">
