--- a/index.html
+++ b/index.html
@@ -51,16 +51,215 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 				    <div class="resume-section-content">
-					    <p class="mb-0 mtxt">Java & Spring 기반의 4년차 백엔드 개발자로 E-commerce 구축 및 운영을 담당하여, <br>회원 가입/로그인, 상품 구매, 주문/결제, 배송 관리 등의 기능을 개발하였습니다.</p>
-						<p class="mtxt">특히, API와 Backoffice 개발을 중심으로 진행하였으며, Batch와 Presentation 영역도 경험이 있습니다. <br>이를 통해, 시스템 전반적인 구조와 개발 경험을 쌓았습니다.</p>
-						<p class="mb-0 mtxt">또한, 소스 코드의 가독성과 유지보수성을 높이기 위해 지속적인 리팩토링을 수행하였습니다. <br>이로 인해, 서비스 안정성을 보장하고 비지니스 가치를 창출하는데 큰 역할을 하였습니다.</p>
-						<p class="mtxt">더불어, 새로운 기술과 개발 도구에 대한 지속적인 학습과 개인적인 프로젝트 수행을 통해 지식과 경험을 늘리고 있습니다.</p>
+<!--					    <p class="mb-0 mtxt">Java & Spring 기반의 6년차 백엔드 개발자로 E-commerce 구축 및 운영을 담당하여, <br>회원 가입/로그인, 상품 구매, 주문/결제, 배송 관리 등의 기능을 개발하였습니다.</p>-->
+<!--						<p class="mtxt">특히, API와 Backoffice 개발을 중심으로 진행하였으며, Batch와 Presentation 영역도 경험이 있습니다. <br>이를 통해, 시스템 전반적인 구조와 개발 경험을 쌓았습니다.</p>-->
+<!--						<p class="mb-0 mtxt">또한, 소스 코드의 가독성과 유지보수성을 높이기 위해 지속적인 리팩토링을 수행하였습니다. <br>이로 인해, 서비스 안정성을 보장하고 비지니스 가치를 창출하는데 큰 역할을 하였습니다.</p>-->
+<!--						<p class="mtxt">더불어, 새로운 기술과 개발 도구에 대한 지속적인 학습과 개인적인 프로젝트 수행을 통해 지식과 경험을 늘리고 있습니다.</p>-->
 				    </div>
 			    </section><!--//summary-section-->
 			    <div class="row">
 				    <div class="col-lg-9">
 					    <section class="resume-section experience-section mb-5">
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Work Experience</h2>
+							<div class="resume-section-content">
+								<div class="resume-timeline position-relative">
+									<article class="resume-timeline-item position-relative">
+										<div class="resume-timeline-item-header mb-2">
+											<div class="d-flex flex-column flex-md-row">
+												<h3 class="resume-position-title font-weight-bold mb-1 mtxt">
+													주식회사 피치마인드(peachmind Co.,Ltd.)
+												</h3>
+											</div><!--//row-->
+										</div><!--//resume-timeline-item-header-->
+										<div class="resume-timeline-item-desc">
+											<p class="mtxt"></p>
+											<div class="resume-position-time mtxt">2023-08 - 2025-05</div>
+											<h4 class="resume-timeline-item-desc-heading font-weight-bold"></h4>
+											<ul class="list-achieve">
+											</ul>
+										</div>
+										<div class="resume-section-content">
+											<div class="resume-timeline position-relative">
+
+												<!-- LG 에너지솔루션 Davinci Scheduler 개발 프로젝트 -->
+												<article class="resume-timeline-item position-relative pb-5">
+													<div class="resume-timeline-item-header mb-2">
+														<div class="d-flex flex-column flex-md-row">
+															<h3 class="resume-position-title font-weight-bold mb-1 mtxt">LG 에너지솔루션 Davinci Scheduler 개발 프로젝트</h3>
+														</div><!--//row-->
+
+													</div><!--//resume-timeline-item-header-->
+													<div class="resume-timeline-item-desc">
+														<p class="mtxt">xcvb</p>
+														<div class="resume-position-time mtxt">2025-02 - 2025-10</div>
+														<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
+														<ul class="list-achieve">
+															<li class="mtxt">zxcv</li>
+															<li class="mtxt">zxcvz</li>
+														</ul>
+														<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Java 17</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Spring Boot 3.2</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">JPA</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Postgresql</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">React</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">TypeScript</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Git</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jenkins</span></li>
+														</ul>
+													</div><!--//resume-timeline-item-desc-->
+												</article><!--//resume-timeline-item-->
+
+												<!-- LG 에너지솔루션 Glue API 개발 프로젝트 -->
+												<article class="resume-timeline-item position-relative pb-5">
+													<div class="resume-timeline-item-header mb-2">
+														<div class="d-flex flex-column flex-md-row">
+															<h3 class="resume-position-title font-weight-bold mb-1 mtxt">LG 에너지솔루션 Glue API 개발 프로젝트</h3>
+														</div><!--//row-->
+
+													</div><!--//resume-timeline-item-header-->
+													<div class="resume-timeline-item-desc">
+														<p class="mtxt">xcvb</p>
+														<div class="resume-position-time mtxt">2024-10 - 2025-01</div>
+														<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
+														<ul class="list-achieve">
+															<li class="mtxt">zxcv</li>
+															<li class="mtxt">zxcvz</li>
+														</ul>
+														<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Java 17</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Spring Boot 3.2</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">JPA</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Postgresql</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Git</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jenkins</span></li>
+														</ul>
+													</div><!--//resume-timeline-item-desc-->
+												</article><!--//resume-timeline-item-->
+
+												<!-- PDI 모바일 구축 프로젝트 -->
+												<article class="resume-timeline-item position-relative pb-5">
+													<div class="resume-timeline-item-header mb-2">
+														<div class="d-flex flex-column flex-md-row">
+															<h3 class="resume-position-title font-weight-bold mb-1 mtxt">PDI 모바일 구축 프로젝트</h3>
+														</div><!--//row-->
+
+													</div><!--//resume-timeline-item-header-->
+													<div class="resume-timeline-item-desc">
+														<p class="mtxt">xcvb</p>
+														<div class="resume-position-time mtxt">2023-06 - 2024-09</div>
+														<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
+														<ul class="list-achieve">
+															<li class="mtxt">zxcv</li>
+															<li class="mtxt">zxcvz</li>
+														</ul>
+														<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Java 17</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Spring Boot 3.1</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">JPA</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Postgresql</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Git</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jenkins</span></li>
+														</ul>
+													</div><!--//resume-timeline-item-desc-->
+												</article><!--//resume-timeline-item-->
+
+
+												<!-- Dadoom 모바일 구축 프로젝트 -->
+												<article class="resume-timeline-item position-relative pb-5">
+													<div class="resume-timeline-item-header mb-2">
+														<div class="d-flex flex-column flex-md-row">
+															<h3 class="resume-position-title font-weight-bold mb-1 mtxt">Dadoom 모바일 구축 프로젝트</h3>
+														</div><!--//row-->
+
+													</div><!--//resume-timeline-item-header-->
+													<div class="resume-timeline-item-desc">
+														<p class="mtxt">xcvb</p>
+														<div class="resume-position-time mtxt">2023-09 - 2024-05</div>
+														<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
+														<ul class="list-achieve">
+															<li class="mtxt">zxcv</li>
+															<li class="mtxt">zxcvz</li>
+														</ul>
+														<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Java 17</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Spring Boot 3.1</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">JPA</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Postgresql</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">React Native</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">TypeScript</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Git</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jenkins</span></li>
+														</ul>
+													</div><!--//resume-timeline-item-desc-->
+												</article><!--//resume-timeline-item-->
+
+												<!-- GoParts 모바일 구축 프로젝트 -->
+												<article class="resume-timeline-item position-relative pb-5">
+													<div class="resume-timeline-item-header mb-2">
+														<div class="d-flex flex-column flex-md-row">
+															<h3 class="resume-position-title font-weight-bold mb-1 mtxt">GoParts 모바일 구축 프로젝트</h3>
+														</div><!--//row-->
+
+													</div><!--//resume-timeline-item-header-->
+													<div class="resume-timeline-item-desc">
+														<p class="mtxt">xcvb</p>
+														<div class="resume-position-time mtxt">2023-08 - 2023-09</div>
+														<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
+														<ul class="list-achieve">
+															<li class="mtxt">zxcv</li>
+															<li class="mtxt">zxcvz</li>
+														</ul>
+														<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Java 17</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Spring Boot 3.1</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">JPA</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Postgresql</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Vue</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">TypeScript</span></li>
+														</ul>
+														<ul class="list-inline">
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Git</span></li>
+															<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Jenkins</span></li>
+														</ul>
+													</div><!--//resume-timeline-item-desc-->
+												</article><!--//resume-timeline-item-->
+
+											</div><!--//resume-timeline-->
+										</div>
+									</article>
+								</div>
+
+							</div>
 						    <div class="resume-section-content">
 								<div class="resume-timeline position-relative">
 									<article class="resume-timeline-item position-relative">
